# Erebus

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: privacy-invariant-matrix.md
erebus/: benchmark.py  blacklist.py  catalog.py  catalog_matcher.py  catalog_scan.py  codex_shim.py  config.py  daemon.py  filter.py  logger.py  mcp_server.py  perf.py  proxy.py  reveal.py  shim.py  source_plugins.py
erebus/audit/: __init__.py  loc.py  logger.py
erebus/cataloging/: __init__.py  matcher.py  scan.py  sources.py  store.py
erebus/commands/: __init__.py  benchmark.py  blacklist.py  catalog.py  check_file.py  reveal.py
erebus/core/: __init__.py  boundary.py  cache.py  cache_disk.py  clock.py  detect.py  escapes.py  knownvalues.py  message_cache.py  modes.py  patterns.py  prescan.py  state.py  streaming.py  tokenizer.py  verify.py
erebus/guards/: files.py  images.py
erebus/proxy/: __init__.py  app.py  chat.py  http.py  payload.py  regular.py  responses.py  stream.py  telemetry.py  tokenmap.py
erebus/runtime/: __init__.py  daemon.py  lifecycle.py  mcp_server.py  ports.py
erebus/setup/: __init__.py  editors.py  services.py
erebus/shim/: __init__.py  __main__.py  _state.py  incoming.py  launcher.py  outgoing.py
erebus/ui/: colors.py  popup.py
erebus/verifiers/: __init__.py  gemma_llm.py  openai_pf.py  piiranha.py
tests/: audit_boundary.py  run_tests.sh  test_batch_tokenize.py  test_blacklist.py  test_catalog_api_e2e.py  test_catalog_cli.py  test_catalog_helpers.py  test_catalog_matcher.py  test_catalog_model.py  test_catalog_scan.py  test_check_file.py  test_codex_setup.py  test_daemon_lifecycle.py  test_detok_write_scope.py  test_e2e_filter.py  test_file_guard_patterns.py  test_gdpr_hygiene.py  test_loc.py  test_orphan_cleanup.py  test_pii_filter.py  test_proxy_catalog_integration.py  test_proxy_tokenize_latency.py  test_setup_services.py  test_shim_retokenize_gate.py  test_token_usage.py  test_unresolved_block.py  test_verifiers.py  test_wrapper_integration.py
tests/boundary/: README.md  helpers.py  test_chat_non_message_fields.py  test_chat_roundtrip.py  test_db_migration.py  test_db_transient_mode.py  test_degraded_behavior.py  test_forget_erase.py  test_from_model_file_write.py  test_from_model_shell_cmd.py  test_from_model_tool_call.py  test_invariant_properties.py  test_known_value_prescan.py  test_mcp_reveal_masked.py  test_message_cache_prescan.py  test_multiprocess_sync.py  test_prescan_perf.py  test_proxy_nonstreaming_toolcall.py  test_responses_input_items.py  test_scope_retention.py  test_static_audit.py  test_streaming_holdback.py  test_to_model_file_read.py  test_to_model_tool_result.py  test_unresolvable_token.py  test_web_content_intake.py
tests/boundary/fixtures/: cheating_adapter.py
